Fixed Gallery Issues TODO: image z-index

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1376,15 +1376,11 @@ a, a:before {
   text-align: center;
   color: #71777b;
 }
-#fun .wrapper {
-  padding-top: 0;
-  position: absolute;
-  width: 100%;
-  max-width: 100%;
-}
-#fun .wrapper .content {
+#fun .content {
   position: relative;
-  z-index: 1000;
+}
+#fun .content p {
+  margin: 3em 0;
 }
 #fun .fun {
   margin: 0rem auto 0 0;
@@ -1393,8 +1389,7 @@ a, a:before {
   margin: 0 auto;
 }
 #fun .photostack {
-  height: 100%;
-  z-index: 999;
+  height: 74%;
 }
 
 /*
@@ -6988,7 +6983,7 @@ a, a:before {
   font-style: normal;
 }
 .photostack {
-  background: #ddd;
+  background: transparent;
   position: relative;
   text-align: center;
   overflow: hidden;
@@ -7018,6 +7013,7 @@ a, a:before {
   background: #fff;
   padding: 1em;
   border-radius: 3px;
+  top: -42%;
 }
 
 .js .photostack figure {
