--- a/assets/sass/sections/_fun.scss
+++ b/assets/sass/sections/_fun.scss
@@ -12,17 +12,15 @@
 	background: lighten($gray,20%);
 	text-align: center;
 	color:$headingFontColor;
-	.wrapper{
-		padding-top: 0;
-		position: absolute;
-		
-		width:100%;
-		max-width: 100%;
+	
 		.content{
 			position: relative;
-			z-index: 1000;
+			
+			p{
+				margin: 3em 0
+			}
 		}
-	}
+
 	.fun{
 		
 		margin:0rem auto 0 0;
@@ -30,8 +28,10 @@
 	}
 	
 	.photostack{
-		height:100%;
-		z-index: 999;
+		height:74%;
+		nav{
+
+		}
 		
 	}
 }
